fixed home button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Abel');
 @import url('https://fonts.googleapis.com/css?family=Aldrich');
 
-
 html{
     height:1000%;
     width:100%;
@@ -11,7 +10,6 @@ html{
 body{
     margin:0px;
     padding:0px;
-    padding-top:100px;
 }
 .background {
     top:0px;
